Location active mark on popover close.

--- a/app/views/advertisements/_popover_select_location.html.slim
+++ b/app/views/advertisements/_popover_select_location.html.slim
@@ -1,3 +1,4 @@
+.last-selected-location lid=""
 - if @location.present? && @location.city?
   - if @locations.present?
     = render 'advertisements/popover_locations'
