--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -4,9 +4,9 @@
       li.media.clearfix.adv_item class="#{'adv_item_even' if index % 2 == 0}" element_id=adv.id
         .col-lg-1.col-md-1.col-sm-12.col-xs-12.text-muted.small
           .row
-            span.col-md-12.col-md-2.col-sm-3
+            span.col-md-12.col-md-2
               time.smart_time datetime=((adv.created_at >= adv.updated_at) ? adv.created_at : adv.updated_at) time_zone=3
-            span.col-md-12.col-sm-12
+            span.col-md-12.col-sm-3
               - if adv.expired?
                 i.fa.fa-pause.fa-lg
               '
