I'm dumb. Location with no children now won't be active. Still unclear why hide event do not fire on second popover close.

--- a/app/views/advertisements/get_locations.js.erb
+++ b/app/views/advertisements/get_locations.js.erb
@@ -10,7 +10,7 @@ $('.popover:first').css('width', $('.popover').width());
 if (el.closest('.location-group').attr('editable') === 'true') {
     $('.search-or-create-street-container-action').removeClass('hidden')
 }
-el.parent().find('.btn').removeClass('active');
+//el.parent().find('.btn').removeClass('active');
 
 
 
