bootstrap 3.3.1.0 (if modal has fade class it won't be shown - don't ask me how i figured it out..)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require_self
  *= require jquery.ui.all
  */
+//@import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap/theme";
 //@import "vendor/font-awesome";
