--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -45,7 +45,7 @@
               i.fa.fa-lock
               '
               |Войти
-            .modal.fade.sign_in_modal aria-hidden="true" aria-labelledby="Авторизация" role="dialog"
+            .modal.sign_in_modal aria-hidden="true" aria-labelledby="Авторизация" role="dialog"
               .modal-dialog.modal-sm
                 .modal-content
                   .modal-header
