--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -26,7 +26,7 @@
               .i.fa.fa-sign-out
               '
               = @current_user.email
-            .modal.fade.log_out_modal aria-hidden="true" aria-labelledby="Выйти" role="dialog"
+            .modal.log_out_modal aria-hidden="true" aria-labelledby="Выйти" role="dialog"
               .modal-dialog.modal-sm
                 .modal-content
                   .modal-header
