--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -83,6 +83,7 @@
               | местоположение
               '
               i.caret
+    .last-selected-location lid=""
     - if @hidden_location_sections.present?
       .row.col-xs-12.control_hide_action
         label.control-label
