--- a/app/views/devise/registrations/_fields.html.slim
+++ b/app/views/devise/registrations/_fields.html.slim
@@ -25,16 +25,14 @@
       .input-group
         = phone_form.text_field :original, class: "form-control#{check_phone ? ' checkPhone': ''}", required: true, placeholder: '+7(863) 2-12-85-06'
         span.input-group-btn
-          = phone_form.link_to_remove class: 'btn btn-default' do
+          = phone_form.link_to_remove class: 'btn btn-default dell-phone-number hidden' do
             i.fa.fa-minus
+          = f.link_to_add :phones, :data => { :target => "#reg-phones" }, class: 'btn btn-default add-phone-number' do
+            i.fa.fa-plus
 
-.form-group
-  label.control-label.col-sm-3
-  .input-group.col-sm-4.small
-    = f.link_to_add 'Добавить номер', :phones, :data => { :target => "#reg-phones" }
 - if additional_params
   .form-group
-    label.control-label.col-sm-4
+    label.control-label.col-sm-3
       i.fa.fa-envelope-o
       '
       | почта
