--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,9 +13,10 @@
  *= require_self
  *= require jquery.ui.all
  */
-//@import "bootstrap-sprockets";
+@import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap/theme";
+
 //@import "vendor/font-awesome";
 //@import "font-awesome-sprockets";
 @import 'font-awesome';
