Import from donrio - management/advertisements - select action import donrio. After file upload the sidekiq worker starts to parse uploaded file.

--- a/app/views/rails_admin/main/import_donrio.html.slim
+++ b/app/views/rails_admin/main/import_donrio.html.slim
@@ -1,6 +1,11 @@
-h2= t(:upload_file)
+h2= t('admin.form.upload_file')
 
-=form_tag url: '/upload_donrio', method: :post, multipart: true do
-=file_field_tag :donrio, class: ''
-=submit_tag t(:create), class: 'btn btn-default btn-success'
+=form_tag '/upload_donrio', method: :post, multipart: true do
+ = file_field_tag 'donrio', required: true, accept: 'xls'
+ br
+ =submit_tag t('admin.form.save'), class: 'btn btn-default btn-success'
+
+
+
+
 
