price_from - price_to rendering in short card fix.

--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -35,7 +35,7 @@
               span.lead
                 span.formatRub
                   = adv.price_from
-                - if adv.price_to.present? && adv.price_to != adv.price_to
+                - if adv.price_to.present? && adv.price_to != adv.price_from
                   '
                   | -
                   '
