--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -18,18 +18,51 @@ hr
               '
               |info@multilisting.su
     .col-sm-2
-      ul.list-unstyled
-        li
-          javascript:
-            document.write("<a href='//www.liveinternet.ru/click' " +
-            "target=_blank><img src='//counter.yadro.ru/hit?t17.1;r" +
-            escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
-            ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
-            screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
-            ";" + Math.random() +
-            "' alt='' title='LiveInternet: показано число просмотров за 24" +
-            " часа, посетителей за 24 часа и за сегодня' " +
-            "border='0' width='88' height='31'><\/a>");
+      javascript:
+        document.write("<a href='//www.liveinternet.ru/click' " +
+        "target=_blank><img src='//counter.yadro.ru/hit?t17.1;r" +
+        escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
+        ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
+        screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
+        ";" + Math.random() +
+        "' alt='' title='LiveInternet: показано число просмотров за 24" +
+        " часа, посетителей за 24 часа и за сегодня' " +
+        "border='0' width='88' height='31'><\/a>");
+    .col-sm-2
+      a href="https://metrika.yandex.ru/stat/?id=28695786&amp;from=informer" rel="nofollow" target="_blank"
+        img alt="Яндекс.Метрика" onclick="try{Ya.Metrika.informer({i:this,id:28695786,lang:'ru'});return false}catch(e){}" src="//bs.yandex.ru/informer/28695786/3_0_FFFFFFFF_EFEFEFFF_0_pageviews" style="width:88px; height:31px; border:0;" title="Яндекс.Метрика: данные за сегодня (просмотры), визиты и уникальные посетители)"
+      javascript:
+        var yaParams = {
+        };
+        (function (d, w, c) {
+          (w[c] = w[c] || []).push(function () {
+            try {
+              w.yaCounter28695786 = new Ya.Metrika({
+                id: 28695786,
+                webvisor: true,
+                clickmap: true,
+                trackLinks: true,
+                accurateTrackBounce: true,
+                trackHash: true,
+                params: window.yaParams || {}
+              });
+            } catch (e) {
+            }
+          });
+          var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () {
+            n.parentNode.insertBefore(s, n);
+          };
+          s.type = "text/javascript";
+          s.async = true;
+          s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+          if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+          } else {
+            f();
+          }
+        })(document, window, "yandex_metrika_callbacks");
+      noscript
+        img alt="" src="//mc.yandex.ru/watch/28695786" style=("position:absolute; left:-9999px;")
 hr
 
 
