--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Здравствуйте, <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Кто-то запросил ссылку для смены пароля на сайте www.multilisting.su. Если это Вы, то это можно сделать по ссылке ниже.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Сменить мой пароль на новый', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Если Вы не отпавляли запрос на смену пароля, пожалуйста, проигнорируйте это сообщение.</p>
+<p>Ваш пароль не изменится до тех пор, пока вы не перейдете по ссылке выше.</p>
