--- a/app/views/shared/_pagination.html.slim
+++ b/app/views/shared/_pagination.html.slim
@@ -28,6 +28,21 @@
           li
             a href=url_path.call(url_params.merge!(current_page + 1 != 1 ? {:page => current_page + 1} : {}))
               | &raquo;
+      .btn-group.pagination.pull-right
+        .button-dropdown
+          a.btn.btn-default.dropdown-toggle data-toggle="dropdown" href="#"
+            i.fa.fa-list
+            '
+            = params[:per_page].presence || 25
+            '
+            | объявлений на страницу
+            span.caret
+          ul.dropdown-menu
+            - [25, 50, 75, 100].each do |e|
+              li class="#{'active' if (params[:per_page].presence || 25).to_i == e}"
+                a href=(url_path.call(url_params.merge({:per_page => e})))
+                  = "#{e} на страницу"
+
 
 
 
