navigation show on hover in progress.

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -22,24 +22,51 @@
                 | Зарегистрироваться
         li.nav.navbar-nav
           - if @current_user
-            .button.btn.navbar-btn.btn-default data-toggle="modal" data-target=".log_out_modal"
-              .i.fa.fa-sign-out
-              '
-              = @current_user.email
-            .modal.log_out_modal aria-hidden="true" aria-labelledby="Выйти" role="dialog"
+            li.dropdown.nav
+              a.dropdown-toggle data-toggle="dropdown" href="#"
+                i.fa.fa-user.fa-lg
+                  = @current_user.name || @current_user.email
+                i.caret
+              ul.dropdown-menu.sub-menu
+                li
+                  a href="#"
+                    i.fa.fa-gear.fa-spin
+                    | Настройки
+                li
+                  a href="#"
+                    i.fa.fa-money
+                    | Кошелёк
+                li.divider
+                li
+                  a href="#"
+                    i.fa.fa-male
+                    i.fa.fa-female
+                    | Агенты
+                li
+                  a href="#"
+                    i.fa.fa-wrench
+                    | Агентство
+                li.divider
+                li
+                  a href="#"
+                    i.fa.fa-power-off
+                    | Выход
+
+            /.modal.log_out_modal aria-hidden="true" aria-labelledby="Выйти" role="dialog"
               .modal-dialog.modal-sm
                 .modal-content
-                  .modal-header
+                  /.modal-header
                     button.close data-dismiss="modal" type="button"
                       span aria-hidden="true"  &times;
                       span.sr-only Close
                     h4.modal-title Выход
-                  .modal-body
+                  /.modal-body
                     | Вы уверены что хотите выйти?
-                  .modal-footer
+                  /.modal-footer
                     = link_to 'Выйти', destroy_user_session_path, method: :delete, class: "btn btn-danger"
                     a href="#" data-dismiss="modal" class="btn btn-default" type="button"
                       | Отмена
+
           - else
             .button.btn.navbar-btn.btn-default data-toggle="modal" data-target=".sign_in_modal"
               i.fa.fa-lock
