--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -90,6 +90,13 @@ h2 {
   margin: 0;
 }
 
+.dropdown-menu .sub-menu {
+  visibility: hidden;
+}
+.dropdown-menu li:hover .sub-menu {
+  visibility: visible;
+}
+
 
 
 
