--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -90,11 +90,8 @@ h2 {
   margin: 0;
 }
 
-.dropdown-menu .sub-menu {
-  visibility: hidden;
-}
-.dropdown-menu li:hover .sub-menu {
-  visibility: visible;
+.dropdown:hover .dropdown-menu {
+  display: block;
 }
 
 
