--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -29,43 +29,30 @@
                 i.caret
               ul.dropdown-menu.sub-menu
                 li
-                  a href="#"
+                  = link_to cabinet_index_path do
                     i.fa.fa-gear.fa-spin
+                    |&nbsp
                     | Настройки
-                li
+                /li
                   a href="#"
                     i.fa.fa-money
                     | Кошелёк
-                li.divider
-                li
+                /li.divider
+                /li
                   a href="#"
                     i.fa.fa-male
                     i.fa.fa-female
                     | Агенты
-                li
+                /li
                   a href="#"
                     i.fa.fa-wrench
                     | Агентство
                 li.divider
                 li
-                  a href="#"
+                  = link_to destroy_user_session_path, method: :delete do
                     i.fa.fa-power-off
+                    |&nbsp
                     | Выход
-
-            /.modal.log_out_modal aria-hidden="true" aria-labelledby="Выйти" role="dialog"
-              .modal-dialog.modal-sm
-                .modal-content
-                  /.modal-header
-                    button.close data-dismiss="modal" type="button"
-                      span aria-hidden="true"  &times;
-                      span.sr-only Close
-                    h4.modal-title Выход
-                  /.modal-body
-                    | Вы уверены что хотите выйти?
-                  /.modal-footer
-                    = link_to 'Выйти', destroy_user_session_path, method: :delete, class: "btn btn-danger"
-                    a href="#" data-dismiss="modal" class="btn btn-default" type="button"
-                      | Отмена
 
           - else
             .button.btn.navbar-btn.btn-default data-toggle="modal" data-target=".sign_in_modal"
