--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -10,12 +10,13 @@
               - if adv.expired?
                 i.fa.fa-pause.fa-lg
               '
-              -if can? :manage, adv
+              - if can? :update, adv
                 a.btn-link href=edit_advertisement_path(adv)
                   i.fa.fa-edit.fa-lg
                 '
                 = link_to top_advertisement_path(adv, from_full_card: true), class: 'btn-link', remote: true do
                   i.fa.fa-level-up.fa-lg
+              - if can? :destroy, adv
                 '
                 = link_to advertisement_path(adv), class: 'btn-link', method: :delete, remote: true, data: { confirm: 'Удалить это объявление?' } do
                   i.fa.fa-trash.fa-lg
@@ -66,8 +67,10 @@
               = adv.phone
 
 - else
-  p Ничего не найдено
-
+  - if params[:controller] == 'advertisements'
+    p Ничего не найдено
+  - if params[:controller] == 'cabinet'
+    p После модерации здесь будут показаны Ваши объявления
 
 
 
