--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -74,20 +74,18 @@
       ul.nav.navbar-nav.navbar-left
         li class="#{'active' if current_page?(controller: '/advertisements', action: :new) || current_page?(controller: '/advertisements', action: :create) }"
           = link_to new_advertisement_path
-            i.fa.fa-cloud-upload.fa-lg
+            i.fa.fa-bullhorn.fa-lg
             '
             | Разместить объявление
         - if user_signed_in?
-          - active_adv_count = CabinetCounter.active_adv_count(current_user.id)
-          - if active_adv_count > 0
-            li class="#{'active' if current_page?(controller: :cabinet)}"
-              = link_to cabinet_index_path('advertisement[expired]' => 0)
-                i.fa.fa-list.fa-lg
-                '
-                | Мои объявления
-                '
-                span.badge
-                  = active_adv_count
+          li class="#{'active' if current_page?(controller: :cabinet)}"
+            = link_to cabinet_index_path('advertisement[expired]' => 0)
+              i.fa.fa-list.fa-lg
+              '
+              | Мои объявления
+              '
+              span.badge
+                = CabinetCounter.active_adv_count(current_user.id)
         - if @root_section.present? && (can? :access, :rails_admin)
           li
             a href=rails_admin.edit_path(model_name: 'section', id: @root_section.id)
