--- a/app/views/shared/_pagination.html.slim
+++ b/app/views/shared/_pagination.html.slim
@@ -20,7 +20,7 @@
                   = page
           - elsif is_first_skip
             - is_first_skip = false
-            li.disabled'
+            li.disabled
               span
                 | ...
 
