--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,29 +1,45 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+h2= "настройки учетной записи"
+.well.clearfix
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form form-horizontal' }) do |f|
+    = devise_error_messages!
+    .fieldset
+      .form-group
+        .control-label.col-sm-3
+          = f.label :email
+        .col-sm-4
+          = f.email_field :email, autofocus: true, class: 'form-control col-md-4'
+        /if devise_mapping.confirmable? && resource.pending_reconfirmation?
+          div= "Currently waiting confirmation for: #{resource.unconfirmed_email}"
+      .form-group
+        .control-label.col-sm-3
+          = f.label :password
+        .col-sm-4
+          = f.password_field :password, autocomplete: "off", class: 'form-control'
+          i
+            |(оставьте пустым, если вы не хотитеизменить его)
+      .form-group
+        .control-label.col-sm-3
+          = f.label :password_confirmation
+        .col-sm-4
+          = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+      .form-group
+        .control-label.col-sm-3
+          = f.label t('activerecord.attributes.user.current_password')
+        .col-sm-4
+          = f.password_field :current_password, autocomplete: "off", class: 'form-control'
+          i
+            |(нам нужно ваш текущий пароль для подтверждения изменений)
+      .form-group
+        .control-label.col-sm-3
+          = f.label t('activerecord.attributes.user.role')
+        .col-sm-4
+          = f.select :role, (options_for_select([['собственник',0],['агент',1]])), {},  {class: ' form-control'}
+      .form-group
+        .control-label.col-sm-3
+        .col-sm-4
+          = f.submit t("helpers.submit.update"), class: 'btn btn-primary btn-large'
+.well.clearfix
+  h3 удалить учетную запись
+  p
+  = button_to t("helpers.submit.delete"), registration_path(resource_name), data: { confirm: "Are you sure?"  }, method: :delete, class: 'btn btn-danger'
+  = link_to t("helpers.navigate.back"), :back
