--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -6,7 +6,7 @@ header
   = nested_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal'}) do |f|
     = devise_error_messages!
     fieldset
-      = render 'devise/registrations/fields', f: f, additional_params: true, check_phone: false
+      = render 'devise/registrations/fields', f: f, additional_params: true, check_phone: false, password_required: true
       .form-group
         .col-sm-4.col-sm-offset-4
           .form-group
