--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -12,5 +12,5 @@ header
           .form-group
             .input-group
               = f.submit 'Зарегистрироваться', class: 'btn btn-primary'
-
+.phone-target-field value="user[phones_attributes]"
 
