--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -3,7 +3,7 @@ h2= "Настройки учетной записи"
   = nested_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal'}) do |f|
     = devise_error_messages!
     fieldset
-      = render 'devise/registrations/fields', f: f, additional_params: true, check_phone: false, password_required: false
+      = render 'devise/registrations/fields', f: f, additional_params: true, check_phone: false
       .form-group
         .col-sm-4.col-sm-offset-4
           .form-group
