--- a/app/views/devise/registrations/_fields.html.slim
+++ b/app/views/devise/registrations/_fields.html.slim
@@ -30,16 +30,17 @@
             i.fa.fa-minus
           = f.link_to_add :phones, :data => { :target => "#reg-phones" }, class: 'btn btn-default add-phone-number hidden' do
             i.fa.fa-plus
-- unless additional_params
-  .form-group
-    label.control-label.col-sm-3
-      i.fa.fa-envelope-o
-      '
-      | почта
-    .col-sm-4
-      .form-group
-        = f.email_field :email, class: 'form-control', required: true, placeholder: 'mail@example.com'
-  - if @adv.new_record? && !can?(:create_from_admin, @adv)
+- if additional_params
+  - if f.object.new_record? && !can?(:create_from_admin, f.object)
+    .form-group
+      label.control-label.col-sm-3
+        i.fa.fa-envelope-o
+        '
+        | почта
+      .col-sm-4
+        .form-group
+          = f.email_field :email, class: 'form-control', required: true, placeholder: 'mail@example.com'
+
     .form-group
       label.control-label.col-sm-3
         i.fa.fa-unlock
