--- a/app/views/advertisements/_photos.html.erb
+++ b/app/views/advertisements/_photos.html.erb
@@ -61,6 +61,7 @@
 </script>
 <!-- The template to display files available for download -->
 <script id="template-download" type="text/x-tmpl">
+  <input type="hidden" name="advertisement[photo_ids][]" value="">
   {% for (var i=0, file; file=o.files[i]; i++) { %}
     <tr class="template-download fade">
       {% if (file.error) { %}
@@ -124,7 +125,7 @@
             context: $('.fileupload')[0]
         }).done(function (result) {
             $(this).fileupload('option', 'done')
-                    .call(this, null, {result: result});
+                    .call(this, $.Event('done'), {result: result});
         });
         <% end %>
 
